2003-05-10  Bruno Haible  <bruno@clisp.org>

	* linebreak.c (iconv_string_length): Don't return -1 just because the
	string is longer than 4 KB.

2003-05-09  Bruno Haible  <bruno@clisp.org>

	* error.c: Update from gnulib with modifications.

2003-05-09  Bruno Haible  <bruno@clisp.org>

	* canonicalize.c: Add #ifdef around versioned_symbol. Avoids an
	"extraneous semicolon" warning from Tru64 cc.

2003-05-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (DEFS): Fix spelling of DEPENDS_ON_LIBICONV.
	* Makefile.msvc (CFLAGS): Likewise.

2003-05-03  Bruno Haible  <bruno@clisp.org>

	Upgrade to Unicode-4.0.
	* linebreak.c (nonspacing_table_data): Change width of U+00AD,
	U+0350..U+0357, U+035D..U+035F, U+0600..U+0603, U+0610..U+0615,
	U+0656..U+0658, U+0A01, U+0AE2..U+0AE3, U+0CBC, U+17B4..U+17B5,
	U+17DD, U+1920..U+1922, U+1927..U+192B, U+1932, U+1939..U+193B
	from 1 to 0. Change width of U+0CBF, U+0CC6, U+180E from 0 to 1.
	(uc_width): Change width of U+4DC0..U+4DFF from 2 to 1. Change width
	of U+2A6D7..U+2F7FF, U+2FA1E..U+2FFFD, U+30000..U+3FFFD from 1 to 2.
	Change width of U+E0100..U+E01EF from 1 to 0.

2003-05-02  Bruno Haible  <bruno@clisp.org>

	Support for libtool-1.5.
	* progname.c (set_program_name): Remove a leading "<dirname>/.libs/lt-"
	or "<dirname>/.libs/", not only "lt-".

2003-04-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: New variables ABIFLAGS, DEFS. Avoid rules with no
	lines. Update library creation rule. Don't use the force target.
	Correct wildcard syntax. Create fnmatch.h.
	Suggested by Jouk Jansen <joukj@hrem.stm.tudelft.nl>.

2003-04-12  Bruno Haible  <bruno@clisp.org>

	* localcharset.c (get_charset_aliases): Add special case for VMS.

2003-04-10  Bruno Haible  <bruno@clisp.org>

	* findprog.c (find_in_path): Use 'bool' and eaccess().
	Suggested by Paul Eggert.

2003-04-06  Bruno Haible  <bruno@clisp.org>

	* progname.c: Move out all methods depending on ENABLE_RELOCATABLE...
	* progreloc.c: ... to here. New file.